--- a/60_conclusion.tex
+++ b/60_conclusion.tex
@@ -1,5 +1,5 @@
 \chapter{Conclusion and Future Development} \newpage a \newpage a
 
-threads_vs_events threads for different use-cases
+%threads_vs_events threads for different use-cases
 
-C# 5 async
+%C# 5 async
