--- a/10_introduction.tex
+++ b/10_introduction.tex
@@ -4,4 +4,8 @@
 
 \section{Objective} \newpage a
 
+Not a comparison between threads and events
+Not for general programming, specific to Web
+
+
 \section{Structure}
